@@ -1,0 +1,44 @@
+//
+// "$Id: keyboard.h,v 1.1.2.1 2001/12/30 05:16:10 easysw Exp $"
+//
+// Keyboard/event test header for the Fast Light Tool Kit (FLTK).
+//
+// Copyright 1998-2001 by Bill Spitzak and others.
+//
+// This library is free software; you can redistribute it and/or
+// modify it under the terms of the GNU Library General Public
+// License as published by the Free Software Foundation; either
+// version 2 of the License, or (at your option) any later version.
+//
+// This library is distributed in the hope that it will be useful,
+// but WITHOUT ANY WARRANTY; without even the implied warranty of
+// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+// Library General Public License for more details.
+//
+// You should have received a copy of the GNU Library General Public
+// License along with this library; if not, write to the Free Software
+// Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307
+// USA.
+//
+// Please report all bugs and problems to "fltk-bugs@fltk.org".
+//
+
+#ifndef keyboard_h
+#  define keyboard_h
+#  include <stdio.h>
+#  include <FL/Fl.H>
+#  include <FL/Fl_Window.H>
+
+class MyWindow : public Fl_Window {
+  int handle(int);
+public:
+  MyWindow(int w, int h, const char *t=0L) 
+    : Fl_Window( w, h, t ) { }
+};
+
+#endif // !keyboard_h
+
+
+//
+// End of "$Id: keyboard.h,v 1.1.2.1 2001/12/30 05:16:10 easysw Exp $".
+//
